# pcm1864_usb_4ch_mic

./: .gitignore  CMakeLists.txt  README.md  build.txt
main/: CMakeLists.txt  board.c  board.h  idf_component.yml  main.c  tusb_config.h  usb_descriptors.c
src/: CMakeLists.txt  audio_hw.c  audio_hw.h  main.c  pcm1864.c  pcm1864.h  pins.h  plot_audio_samples.py  usb_descriptors.c
